--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,67 @@
 body {
-    font-family: "Times New Roman", Times, serif;
-    color: #000000;
+  color: #000000;
+  font-family: "Times New Roman", Times, serif;
 }
 
 a, a:link, a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: #000000;
+  color: #000000;
+  text-decoration: none;
 }
 
 .row {
-    margin: 30px 0px;
+  margin: 30px 0;
 }
 
 .grid-sizer, .grid-item {
-    width: 33%;
+  width: 33%;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .navbar-default {
-    border-color: transparent;
-    background-color: #96ceb4;
+  background-color: #96ceb4;
+  border-color: transparent;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 .navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:link, .navbar-default .navbar-nav>li>a:visited, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-brand, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
-    color: #000000;
+  color: #000000;
 }
 
 .line {
-    border-color: black;
-    border-width: 2px;
-    margin: 20px 50px;
+  border-color: black;
+  border-width: 2px;
+  margin: 20px 50px;
 }
 
 #top {
-    background-color: #ffeead;
-    padding-top: 35px;
+  background-color: #ffeead;
+  padding-top: 35px;
 }
 
 #portfolio {
-    background-color: #ff6f69;
+  background-color: #ff6f69;
 }
 
 #contact {
-    background-color: #ffcc5c;
+  background-color: #ffcc5c;
 }
 
 .form-control {
-    background-color: inherit;
-    border: 1px solid #000000;
-    color: #000000;
+  background-color: inherit;
+  border: 1px solid #000000;
+  color: #000000;
 }
 
 .form-control::-moz-placeholder {
-    color: #000000;
+  color: #000000;
 }
 
 #footer {
-    background-color: #88d8b0;
+  background-color: #88d8b0;
 }
